# partial_epoch_db

./: .gitattributes  .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
dbc_parser/: Cargo.toml  README.md  justfile
dbc_parser/data/: parsed_items.json
dbc_parser/src/: main.rs  models.rs  parse.rs  utils.rs
dbc_parser/src/parse/: item.rs  item_class.rs  item_display_info.rs  item_sets.rs  item_sub_class.rs  spell_description_vars.rs  spells.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: FilterBar.tsx  ItemTooltip.tsx  SearchBar.tsx  VirtualizedItemGrid.tsx
src/types/: item.ts
src/utils/: itemSizing.ts  paths.ts
