[package]
name = "dbc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
wow-mpq = "0.3.0"
wow_dbc = { version = "0.3.0", features = ["wrath"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
csv = "1.3"
